--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,10 @@ p {
   background-color: white; }
 
 .sectionUno {
-  background: #0dcaf0;
+  background: #118ab2;
   height: 100vh;
   background-size: cover;
-  border-radius: 0px 300px 300px 0px;
+  border-radius: 200px;
   border-bottom: white solid 10px;
   text-align: center;
   justify-content: center; }
@@ -70,11 +70,15 @@ p {
     padding: 5% 3% 5% 5%;
     border: whitesmoke solid 0.5px; }
   .sectionUno .sectionUno__texto button a {
-    text-decoration: none; }
+    text-decoration: none;
+    color: white;
+    transition: 0.2; }
+  .sectionUno .sectionUno__texto button a:hover {
+    color: #073b4c; }
 
 .sectionDos {
-  background: #dc3545;
-  border-radius: 0 50% 50% 0;
+  background: #ef476f;
+  border-radius: 200px;
   border-bottom: white solid 10px;
   text-align: center;
   justify-content: center;
@@ -85,17 +89,20 @@ p {
   .sectionDos .row {
     justify-content: space-between; }
     .sectionDos .row .card {
-      border: white;
-      opacity: 0.7; }
+      border: white; }
     .sectionDos .row .card img {
       width: 200px;
       align-self: center;
       padding-top: 10%;
       border: white; }
+    .sectionDos .row .card-body a {
+      transition: 0.2s; }
+    .sectionDos .row .card-body a:hover {
+      color: #073b4c; }
 
 .sectionTres {
-  background: #20c997;
-  border-radius: 0 40% 40% 0;
+  background: #06d6a0;
+  border-radius: 200px;
   text-align: center;
   justify-content: center;
   height: 100%;
@@ -113,7 +120,10 @@ p {
       border: solid white 0.5px; }
     .sectionTres .sectionTres__texto button a {
       color: white;
-      text-decoration: none; }
+      text-decoration: none;
+      transition: 0.2; }
+    .sectionTres .sectionTres__texto button a:hover {
+      color: #073b4c; }
   .sectionTres .sectionTres__imagen {
     height: 100%; }
     .sectionTres .sectionTres__imagen img {
@@ -195,3 +205,18 @@ p {
 
 .logo_texto--color {
   color: white; }
+
+.btn-primary {
+  background-color: #073b4c;
+  border: #073b4c;
+  transition: background-color 0.2s; }
+
+.btn-primary:hover {
+  background-color: #ffd166; }
+
+.sectionUno a {
+  color: black;
+  transition: 0.5s; }
+
+main a:hover {
+  color: black; }
