--- a/scss/_sectionDos.scss
+++ b/scss/_sectionDos.scss
@@ -1,6 +1,6 @@
 .sectionDos {
-  background: #dc3545;
-  border-radius: 0 50% 50% 0;
+  background: #ef476f;
+  border-radius: 200px;
   border-bottom: white solid 10px;
   text-align: center;
   justify-content: center;
@@ -13,13 +13,18 @@
     justify-content: space-between;
     .card {
       border: white;
-      opacity: 0.7;
     }
     .card img {
       width: 200px;
       align-self: center;
       padding-top: 10%;
       border: white;
+    }
+    .card-body a {
+      transition: 0.2s;
+    }
+    .card-body a:hover {
+      color: #073b4c;
     }
   }
 }
