--- a/scss/_sectionUno.scss
+++ b/scss/_sectionUno.scss
@@ -1,9 +1,9 @@
 .sectionUno {
   // background-image: url(../imagenes/esquina2.jpg);
-  background: #0dcaf0;
+  background: #118ab2;
   height: 100vh;
   background-size: cover;
-  border-radius: 0px 300px 300px 0px;
+  border-radius: 200px;
   border-bottom: white solid 10px;
   text-align: center;
   justify-content: center;
@@ -30,6 +30,11 @@
     }
     button a {
       text-decoration: none;
+      color: white;
+      transition: 0.2;
+    }
+    button a:hover {
+      color: #073b4c;
     }
   }
 }
