--- a/scss/_boton.scss
+++ b/scss/_boton.scss
@@ -2,6 +2,9 @@
   background-color: #073b4c;
   border: #073b4c;
   transition: background-color 0.2s;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200;
+  font-size: 0.5 rem;
 }
 
 .btn-primary:hover {
