--- a/scss/_sectionUno.scss
+++ b/scss/_sectionUno.scss
@@ -1,40 +1,33 @@
 .sectionUno {
-  // background-image: url(../imagenes/esquina2.jpg);
   background: #118ab2;
-  height: 100vh;
-  background-size: cover;
   border-radius: 200px;
+  height: 100%;
+  width: 100%;
+  padding: 5%;
+  margin: 2% 0;
   border-bottom: white solid 10px;
   text-align: center;
   justify-content: center;
-}
 
-.sectionUno {
   .sectionUno__imagen {
     height: 100%;
     img {
       width: 85%;
-      margin: 5% 5% 1% 5%;
-      padding: 5% 5% 1% 5%;
     }
   }
   .sectionUno__texto {
     height: 100%;
-    padding: 6% 3% 0 5%;
+    padding: 2% 3% 0 5%;
 
     p {
       color: white;
       border-radius: 50px;
-      padding: 5% 3% 5% 5%;
+      padding: 5%;
       border: whitesmoke solid 0.5px;
     }
     button a {
       text-decoration: none;
       color: white;
-      transition: 0.2;
-    }
-    button a:hover {
-      color: #073b4c;
     }
   }
 }
