--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "sectionTres.scss";
 @import "darumas.scss";
 @import "omamori.scss";
+@import "japones.scss";
 @import "nosotros.scss";
 @import "carousel";
 @import "footer";
