--- a/scss/_sectionDos.scss
+++ b/scss/_sectionDos.scss
@@ -1,30 +1,42 @@
 .sectionDos {
   background: #ef476f;
   border-radius: 200px;
-  border-bottom: white solid 10px;
+  height: 100%;
+  width: 100%;
+  padding: 5% 5%;
+  margin: 5% 0;
+
   text-align: center;
   justify-content: center;
-  height: 100%;
-  padding: 5%;
-  .sectionDos__titulo {
-    padding-bottom: 4%;
+
+  .sectionDos__texto {
+    height: 100%;
+    padding: 0% 3% 0 3%;
+
+    .sectionDos__titulo {
+      padding-bottom: 2%;
+    }
+
+    p {
+      color: white;
+      border-radius: 50px;
+      padding: 5%;
+      border: solid white 0.5px;
+    }
+    .sectionDos__boton {
+      padding-top: 4%;
+      button a {
+        color: white;
+        text-decoration: none;
+      }
+    }
   }
-  .row {
-    justify-content: space-between;
-    .card {
-      border: white;
-    }
-    .card img {
-      width: 200px;
-      align-self: center;
-      padding-top: 10%;
-      border: white;
-    }
-    .card-body a {
-      transition: 0.2s;
-    }
-    .card-body a:hover {
-      color: #073b4c;
+  .sectionDos__imagen {
+    height: 65vh;
+
+    img {
+      padding: 5% 0;
+      height: 100%;
     }
   }
 }
