--- a/scss/_sectionTres.scss
+++ b/scss/_sectionTres.scss
@@ -1,40 +1,36 @@
 .sectionTres {
   background: #06d6a0;
   border-radius: 200px;
+  height: 100%;
+  width: 100%;
+  padding: 5%;
+  margin: 5% 0;
   text-align: center;
   justify-content: center;
-  height: 100%;
-  padding: 3%;
-  .sectionTres__titulo {
-    padding-bottom: 3%;
+
+  .sectionTres__imagen {
+    height: 100%;
+    img {
+      width: 80%;
+    }
   }
   .sectionTres__texto {
     height: 100%;
+    padding: 2% 3% 0 5%;
 
-    h2 {
+    .sectionTres__titulo {
       padding-bottom: 3%;
     }
+
     p {
       color: white;
       border-radius: 50px;
-      padding: 4%;
+      padding: 5%;
       border: solid white 0.5px;
     }
     button a {
       color: white;
       text-decoration: none;
-      transition: 0.2;
-    }
-    button a:hover {
-      color: #073b4c;
-    }
-  }
-  .sectionTres__imagen {
-    height: 100%;
-    img {
-      width: 70%;
-      margin: 0 2% 10% 5%;
-      padding: 0 2% 10% 5%;
     }
   }
 }
