--- a/scss/_sectionDos.scss
+++ b/scss/_sectionDos.scss
@@ -1,6 +1,6 @@
 .sectionDos {
   background: #ef476f;
-  border-radius: 200px;
+  border-radius: 0 300px 300px 0;
   height: 100%;
   width: 100%;
   padding: 5% 5%;
