--- a/scss/_sectionTres.scss
+++ b/scss/_sectionTres.scss
@@ -1,6 +1,6 @@
 .sectionTres {
   background: #06d6a0;
-  border-radius: 200px;
+  border-radius: 300px 0 0 300px;
   height: 100%;
   width: 100%;
   padding: 5%;
