--- a/scss/_sectionUno.scss
+++ b/scss/_sectionUno.scss
@@ -1,6 +1,6 @@
 .sectionUno {
   background: #118ab2;
-  border-radius: 200px;
+  border-radius: 300px 0 0 300px;
   height: 100%;
   width: 100%;
   padding: 5%;
