--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ p {
   .sectionUno .sectionUno__texto {
     height: 100%;
     padding: 2% 3% 0 5%; }
+    .sectionUno .sectionUno__texto h1 {
+      color: white; }
     .sectionUno .sectionUno__texto p {
       color: white;
       border-radius: 50px;
@@ -85,6 +87,8 @@ p {
     padding: 0% 3% 0 3%; }
     .sectionDos .sectionDos__texto .sectionDos__titulo {
       padding-bottom: 2%; }
+      .sectionDos .sectionDos__texto .sectionDos__titulo h1 {
+        color: white; }
     .sectionDos .sectionDos__texto p {
       color: white;
       border-radius: 50px;
@@ -99,7 +103,8 @@ p {
     height: 65vh; }
     .sectionDos .sectionDos__imagen img {
       padding: 5% 0;
-      height: 100%; }
+      height: 100%;
+      border-radius: 80px; }
 
 .sectionTres {
   background: #06d6a0;
@@ -117,6 +122,8 @@ p {
   .sectionTres .sectionTres__texto {
     height: 100%;
     padding: 2% 3% 0 5%; }
+    .sectionTres .sectionTres__texto h1 {
+      color: white; }
     .sectionTres .sectionTres__texto .sectionTres__titulo {
       padding-bottom: 3%; }
     .sectionTres .sectionTres__texto p {
@@ -208,36 +215,44 @@ p {
 
 .btn--facebook {
   background-color: #3b5998;
-  border-radius: 100px;
-  padding: 10px 20px; }
+  border-radius: 100px; }
 
 .btn--linkedin {
   background-color: #0e76a8;
-  border-radius: 100px;
-  padding: 10px 20px; }
+  border-radius: 100px; }
 
 .btn--twitter {
   background-color: #00acee;
-  border-radius: 100px;
-  padding: 10px 20px; }
+  border-radius: 100px; }
 
 .btn--instagram {
   background-color: #c13584;
-  border-radius: 100px;
-  padding: 10px 20px; }
+  border-radius: 100px; }
 
 .btn--youtube {
   background-color: #c4302b;
-  border-radius: 100px;
-  padding: 10px 20px; }
+  border-radius: 100px; }
 
 .btn--email {
   background-color: #ff9800;
-  border-radius: 100px;
-  padding: 10px 20px; }
+  border-radius: 100px; }
 
 .logo_texto--color {
   color: white; }
+
+.footer__columna-uno p a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.3rem; }
+
+.footer__columna-dos p a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.3rem; }
+
+.footer__columna-tres p {
+  color: white;
+  font-size: 1.3rem; }
 
 .btn-primary {
   background-color: #073b4c;
