--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -11,10 +11,30 @@ $redes: (
   .btn--#{$logo} {
     background-color: $color;
     border-radius: 100px;
-    padding: 10px 20px;
   }
 }
 
 .logo_texto--color {
   color: white;
+}
+
+.footer__columna-uno {
+  p a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.3rem;
+  }
+}
+.footer__columna-dos {
+  p a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.3rem;
+  }
+}
+.footer__columna-tres {
+  p {
+    color: white;
+    font-size: 1.3rem;
+  }
 }
