--- a/scss/_sectionDos.scss
+++ b/scss/_sectionDos.scss
@@ -15,6 +15,9 @@
 
     .sectionDos__titulo {
       padding-bottom: 2%;
+      h1 {
+        color: white;
+      }
     }
 
     p {
@@ -37,6 +40,7 @@
     img {
       padding: 5% 0;
       height: 100%;
+      border-radius: 80px;
     }
   }
 }
