--- a/scss/_sectionTres.scss
+++ b/scss/_sectionTres.scss
@@ -18,6 +18,10 @@
     height: 100%;
     padding: 2% 3% 0 5%;
 
+    h1 {
+      color: white;
+    }
+
     .sectionTres__titulo {
       padding-bottom: 3%;
     }
