--- a/scss/_sectionUno.scss
+++ b/scss/_sectionUno.scss
@@ -19,6 +19,10 @@
     height: 100%;
     padding: 2% 3% 0 5%;
 
+    h1 {
+      color: white;
+    }
+
     p {
       color: white;
       border-radius: 50px;
