--- a/scss/_omamori.scss
+++ b/scss/_omamori.scss
@@ -1,8 +1,8 @@
 .omamori {
   .row {
-    justify-content: space-between;
+    justify-content: center;
     .card {
-      margin: 1% 0;
+      margin: 20px;
     }
 
     .card-body {
