--- a/scss/_omamori.scss
+++ b/scss/_omamori.scss
@@ -12,6 +12,7 @@
       .card-body {
         .card-title {
           text-align: center;
+          margin-bottom: 15px;
         }
         .card-text {
           font-size: 1rem;
