--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,8 @@
 @import "omamori.scss";
 @import "japones.scss";
 @import "nosotros.scss";
-@import "carousel";
+@import "viajes";
+@import "contacto";
 @import "footer";
 @import "boton.scss";
+@import "error.scss";
