--- a/scss/_tipografia.scss
+++ b/scss/_tipografia.scss
@@ -26,6 +26,11 @@ h3 {
   font-size: 45px;
 }
 
+h4 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 200, bold;
+}
+
 p {
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
