--- a/scss/_sectionTres.scss
+++ b/scss/_sectionTres.scss
@@ -16,7 +16,7 @@
   }
   .sectionTres__texto {
     height: 100%;
-    padding: 2% 3% 0 5%;
+    padding: 0% 3% 0 5%;
 
     h1 {
       color: white;
@@ -31,6 +31,7 @@
       border-radius: 50px;
       padding: 5%;
       border: solid white 0.5px;
+      margin-bottom: 40px;
     }
     button a {
       color: white;
