--- a/scss/_sectionUno.scss
+++ b/scss/_sectionUno.scss
@@ -28,6 +28,7 @@
       border-radius: 50px;
       padding: 5%;
       border: whitesmoke solid 0.5px;
+      margin-bottom: 40px;
     }
     button a {
       text-decoration: none;
