acomode media queria de index

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 h1 {
   font-family: "Nothing You Could Do", cursive;
   font-weight: 400;
-  font-size: 95px;
+  font-size: 6rem;
   line-height: 1.3;
   color: #272727;
   text-shadow: 2px 2px 4px #9c9797;
@@ -60,7 +60,8 @@ p {
   text-align: center;
   justify-content: center; }
   .sectionUno .sectionUno__imagen {
-    height: 100%; }
+    height: 100%;
+    align-self: center; }
     .sectionUno .sectionUno__imagen img {
       width: 85%; }
   .sectionUno .sectionUno__texto {
@@ -121,7 +122,8 @@ p {
   text-align: center;
   justify-content: center; }
   .sectionTres .sectionTres__imagen {
-    height: 100%; }
+    height: 100%;
+    align-self: center; }
     .sectionTres .sectionTres__imagen img {
       width: 80%; }
   .sectionTres .sectionTres__texto {
@@ -240,27 +242,27 @@ p {
 
 .btn--facebook {
   background-color: #3b5998;
-  border-radius: 100px; }
+  border-radius: 65px; }
 
 .btn--linkedin {
   background-color: #0e76a8;
-  border-radius: 100px; }
+  border-radius: 65px; }
 
 .btn--twitter {
   background-color: #00acee;
-  border-radius: 100px; }
+  border-radius: 65px; }
 
 .btn--instagram {
   background-color: #c13584;
-  border-radius: 100px; }
+  border-radius: 65px; }
 
 .btn--youtube {
   background-color: #c4302b;
-  border-radius: 100px; }
+  border-radius: 65px; }
 
 .btn--email {
   background-color: #ff9800;
-  border-radius: 100px; }
+  border-radius: 65px; }
 
 footer {
   margin: 100px 0 0 0; }
@@ -317,3 +319,60 @@ main a:hover {
         text-align: left; }
     .error .error__texto .error__subtitulo {
       padding: 0 0 2% 4%; }
+
+@media only screen and (max-width: 1200px) {
+  .sectionUno .sectionUno__imagen img {
+    width: 90%; }
+  .sectionTres .sectionTres__imagen img {
+    width: 100%; } }
+
+@media only screen and (max-width: 768px) {
+  .sectionUno .sectionUno__imagen img {
+    width: 60%; }
+  .sectionTres .sectionTres__imagen {
+    height: 100%;
+    align-self: center; }
+    .sectionTres .sectionTres__imagen img {
+      width: 65%; } }
+
+@media only screen and (max-width: 600px) {
+  .sectionUno {
+    border-radius: 0; }
+    .sectionUno .sectionUno__imagen {
+      height: 100%; }
+      .sectionUno .sectionUno__imagen img {
+        width: 70%; }
+  .sectionDos {
+    border-radius: 0; }
+  .sectionTres {
+    border-radius: 0; }
+    .sectionTres .sectionTres__imagen {
+      height: 100%;
+      align-self: center; }
+      .sectionTres .sectionTres__imagen img {
+        width: 70%; } }
+
+@media only screen and (max-width: 480px) {
+  .sectionUno .sectionUno__texto h1 {
+    color: white;
+    font-size: 4.5rem; }
+  .sectionUno .sectionUno__texto p {
+    font-size: 1rem; }
+  .sectionUno .sectionUno__texto button a {
+    font-size: 1rem; }
+  .sectionDos .sectionDos__texto h1 {
+    margin-top: 20px;
+    color: white;
+    font-size: 4.5rem; }
+  .sectionDos .sectionDos__texto p {
+    font-size: 1rem; }
+  .sectionDos .sectionDos__texto button a {
+    font-size: 1rem; }
+  .sectionTres .sectionTres__texto h1 {
+    margin-top: 20px;
+    color: white;
+    font-size: 4.5rem; }
+  .sectionTres .sectionTres__texto p {
+    font-size: 1rem; }
+  .sectionTres .sectionTres__texto button a {
+    font-size: 1rem; } }
