--- a/scss/_tipografia.scss
+++ b/scss/_tipografia.scss
@@ -6,7 +6,7 @@
 h1 {
   font-family: "Nothing You Could Do", cursive;
   font-weight: 400;
-  font-size: 95px;
+  font-size: 6rem;
   line-height: 1.3;
   color: rgb(39, 39, 39);
   text-shadow: 2px 2px 4px #9c9797;
