--- a/scss/_boton.scss
+++ b/scss/_boton.scss
@@ -5,6 +5,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
   font-size: 0.5 rem;
+  box-shadow: 2px 2px 6px 0 black;
 }
 
 .btn-primary:hover {
