--- a/scss/_sectionDos.scss
+++ b/scss/_sectionDos.scss
@@ -5,9 +5,9 @@
   width: 100%;
   padding: 5% 5%;
   margin: 5% 0;
-
   text-align: center;
   justify-content: center;
+  box-shadow: 0px 5px 7px 0px rgb(71, 17, 17);
 
   .sectionDos__texto {
     height: 100%;
@@ -17,6 +17,7 @@
       padding-bottom: 2%;
       h1 {
         color: white;
+        text-shadow: 1px 1px 2px rgb(46, 45, 45);
       }
     }
 
@@ -25,6 +26,7 @@
       border-radius: 50px;
       padding: 5%;
       border: solid white 0.5px;
+      box-shadow: 0 5px 5px 2px rgba(58, 58, 58, 0.555);
     }
     .sectionDos__boton {
       padding-top: 4%;
