--- a/scss/_sectionTres.scss
+++ b/scss/_sectionTres.scss
@@ -7,6 +7,7 @@
   margin: 5% 0;
   text-align: center;
   justify-content: center;
+  box-shadow: 0 5px 7px 0 rgb(4, 87, 45);
 
   .sectionTres__imagen {
     height: 100%;
@@ -20,6 +21,7 @@
     padding: 0% 3% 0 5%;
     h1 {
       color: white;
+      text-shadow: 1px 1px 2px rgb(46, 45, 45);
     }
     .sectionTres__titulo {
       padding-bottom: 3%;
@@ -30,6 +32,7 @@
       padding: 5%;
       border: solid white 0.5px;
       margin-bottom: 40px;
+      box-shadow: 0 5px 5px 2px rgba(58, 58, 58, 0.555);
     }
     button a {
       color: white;
