--- a/scss/_sectionTres.scss
+++ b/scss/_sectionTres.scss
@@ -1,10 +1,10 @@
 .sectionTres {
   background: #06d6a0;
-  border-radius: 300px 0 0 300px;
+  border-radius: 0 300px 300px 0;
   height: 100%;
   width: 100%;
   padding: 5%;
-  margin: 5% 0;
+  margin: 2% 0;
   text-align: center;
   justify-content: center;
   box-shadow: 0 5px 7px 0 rgb(4, 87, 45);
