--- a/scss/_sectionUno.scss
+++ b/scss/_sectionUno.scss
@@ -7,7 +7,7 @@
   margin: 2% 0;
   text-align: center;
   justify-content: center;
-  box-shadow: 0 0 7px 5px rgb(10, 47, 88);
+  box-shadow: 0 5px 7px 0 rgb(10, 47, 88);
 
   .sectionUno__imagen {
     height: 100%;
