--- a/scss/_sectionDos.scss
+++ b/scss/_sectionDos.scss
@@ -1,9 +1,9 @@
 .sectionDos {
   background: #ef476f;
-  border-radius: 0 300px 300px 0;
+  border-radius: 300px;
   height: 100%;
   width: 100%;
-  padding: 5% 5%;
+  padding: 5% 2%;
   margin: 5% 0;
   text-align: center;
   justify-content: center;
