--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -10,6 +10,7 @@
     padding: 5% 2%;
     .card {
       width: 100%;
+      border: solid 1px #fa3131;
       .card-body {
         width: 100%;
         .card-title {
