--- a/scss/_viajes.scss
+++ b/scss/_viajes.scss
@@ -12,5 +12,9 @@
   margin: 100px;
   .becas__texto {
     padding: 5%;
+    .becas__texto-pregunta {
+      font-weight: bold;
+      color: #ef476f;
+    }
   }
 }
