--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -13,6 +13,81 @@
       }
     }
   }
+  .japonesDos {
+    .japonesDos__url {
+      .japonesDos__url-caja {
+        width: 100%;
+        height: 50vh;
+        .japonesDos__url-content {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .japonesUno {
+    margin: 3% 0;
+    .japonesUno__texto {
+      p {
+        font-size: 1.3rem;
+      }
+      .japonesUno__titulo {
+        padding: 0;
+        font-size: 35px;
+      }
+    }
+  }
+
+  .japonesDos {
+    .japonesDos__texto {
+      .japonesDos__titulo {
+        font-size: 35px;
+        padding: 0;
+      }
+    }
+    .japonesDos__url {
+      .japonesDos__url-caja {
+        width: 100%;
+        height: 35vh;
+        .japonesDos__url-content {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+
+  .japonesTres {
+    margin: 5% 0;
+    .japonesTres__texto {
+      padding: 0 3% 0 0;
+      p {
+        font-size: 1.3rem;
+      }
+      .japonesTres__titulo {
+        padding: 0;
+        font-size: 35px;
+      }
+    }
+  }
+
+  .becas__caja {
+    .becas__caja-row {
+      .becas__imagen {
+        width: 40%;
+        img {
+          width: 100%;
+        }
+      }
+      .becas__texto {
+        p {
+          font-size: 1.3rem;
+        }
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -27,15 +102,12 @@
   .sectionDos {
     .sectionDos__texto {
       order: 2;
-      h1 {
-        padding-top: 0;
-        margin-top: 0;
-      }
     }
     .sectionDos__imagen {
       order: 1;
       img {
-        padding: 2% 0;
+        width: 30%;
+        padding: 0;
       }
     }
   }
@@ -49,8 +121,39 @@
       }
     }
   }
-}
 
+  .japonesDos {
+    .japonesDos__url {
+      order: 2;
+      .japonesDos__url-caja {
+        width: 100%;
+        height: 45vh;
+        .japonesDos__url-content {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+    .japonesDos__texto {
+      text-align: left;
+      order: 1;
+      margin-bottom: 3%;
+    }
+  }
+
+  .becas__caja {
+    .becas__caja-row {
+      .becas__imagen {
+        order: 2;
+        width: 50%;
+      }
+      .becas__texto {
+        order: 1;
+        margin-bottom: 5%;
+      }
+    }
+  }
+}
 @media only screen and (max-width: 600px) {
   .sectionUno {
     border-radius: 0;
@@ -73,6 +176,27 @@
       align-self: center;
       img {
         width: 70%;
+      }
+    }
+  }
+
+  .japonesDos {
+    .japonesDos__url {
+      order: 2;
+      .japonesDos__url-caja {
+        width: 100%;
+        height: 35vh;
+        .japonesDos__url-content {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+  .becas__caja {
+    .becas__caja-row {
+      .becas__imagen {
+        width: 60%;
       }
     }
   }
@@ -122,6 +246,19 @@
       }
       button a {
         font-size: 1rem;
+      }
+    }
+  }
+  .japonesDos {
+    .japonesDos__url {
+      order: 2;
+      .japonesDos__url-caja {
+        width: 100%;
+        height: 30vh;
+        .japonesDos__url-content {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
