--- a/scss/_sectionDos.scss
+++ b/scss/_sectionDos.scss
@@ -3,12 +3,22 @@
   border-radius: 300px;
   height: 100%;
   width: 100%;
-  padding: 5% 2%;
+  padding: 5% 5%;
   margin: 5% 0;
   text-align: center;
   justify-content: center;
   box-shadow: 0px 5px 7px 0px rgb(71, 17, 17);
 
+  .sectionDos__imagen {
+    height: 100%;
+    align-self: center;
+
+    img {
+      padding-right: 5%;
+      width: 90%;
+      border-radius: 80px;
+    }
+  }
   .sectionDos__texto {
     height: 100%;
     padding: 0% 3% 0 3%;
@@ -34,15 +44,6 @@
         color: white;
         text-decoration: none;
       }
-    }
-  }
-  .sectionDos__imagen {
-    height: 100%;
-
-    img {
-      padding: 5% 0;
-      height: 100%;
-      border-radius: 80px;
     }
   }
 }
